test/error/syn/arithMissingExpr.tig
let
    var n := 0
in  
    n:=n**0 /*falta uma expressao ou sobrou um operador*/
end
